Added failThreshold severity and exit code processing